ECCE makalesinin organizasyonu girildi. İçeriği maddeler halinde yazıldı. Şimdilik figürler, yerleşimleri vs. yok. @ozank, @furkankarakaya

--- a/Paper/ECCE 2019/abstract.tex
+++ b/Paper/ECCE 2019/abstract.tex
@@ -1,5 +1,3 @@
 \vspace{-1em}
 \textbf{Abstract}: 
-The complexity of the tiger psychology seems to demand an invocation of our souls if tigers are going to survive. Tigers can no longer afford to live with dogma. Desire is the antithesis of flow.
-Where there is turbulence, tigers cannot thrive. Without joy, one cannot grow. You may be ruled by greed without realizing it. Do not let it eradicate the birth of your path.
-Throughout history, tigers have been interacting with the totality via superpositions of possibilities. Tigers are at a crossroads of rebirth and delusion. Reality has always been radiating travellers whose third eyes are baptized in karma.
+In this paper, the effect of parasitic inductances on power semiconductor device stress, DC link capacitor current ripple and DC link voltage ripple in a motor drive are investigated. A GaN based motor drive inverter module designed for an Integrated Modular Motor Drive (IMMD) application is considered. The actual capacitor current stress in a single module is shown to be much more adverse when the commutation inductances are taken into account. The change in the interleaving scheme is discussed when the connection inductances between inverter modules that are connected in series or parallel are considered. A comparison between series and parallel connection in a modular motor drive is performed with several aspects.
