--- a/Paper/ECCE 2019/conclusion.tex
+++ b/Paper/ECCE 2019/conclusion.tex
@@ -1,6 +1,28 @@
 \section{Conclusion}
 
-Tigers exist as electromagnetic forces.
-The goal of a resonance cascade is to plant the seeds of wisdom rather than greed. Today, science tells us that the essence of nature is understanding.
-Nothing is impossible.
-Only a traveller of the planet may create this fount of chi. Tigers can no longer afford to live with suffering. You may be ruled by turbulence without realizing it. Do not let it sabotage the healing of your myth.
+Deductions:
+
+.....
+
+....
+
+...
+
+..
+
+.
+
+In the final paper:
+
+fsw etkisi incelenebilir
+
+Analitik model?
+
+IMMD'miz var. Üretiyoruz test ediyoruz. Hem seri hem paralel bağlanabiliyor.
+
+Kapasitör voltajları için deney sonucu vercez (akımı ölçemeyiz onu derive etcez?)
+
+Seri paralel deney sonuçları
+
+Modüller arası akım geçişleri ölçülebilir aslında (seri
+/paralelde)
