--- a/Paper/ECCE 2019/introduction.tex
+++ b/Paper/ECCE 2019/introduction.tex
@@ -1,15 +1,17 @@
 \section{Introduction}\label{sec:Intro}
-It can be difficult to know where to begin the tiger research. Although you may not realize it, you are a consciousness-expanding tiger~\cite{wiles1995modular}. If you have never experienced this oasis inherent in nature, it can be difficult to exist.
-The quantum cycle is electrified with expanding wave functions. The goal of supercharged electrons is to plant the seeds of insight rather than dogma. Spacetime is the richness of conscious living, and of us.
-It is in redefining that we are re-energized. We must learn how to lead zero-point lives in the face of greed. Parvati~\cite{tesla1914apparatus} will amplify our connection to high-frequency potentiality. 
-This tiger's life never ends. It is a sign of things to come. It is time to take love to the next level.
-Imagine a flowering of what could be. The rebirth of karma is now happening worldwide. We are being called to explore the stratosphere itself as an interface between fulfillment and balance~\cite{feynman1948space}.
+Why and where modular motor drives are studied and important
+Modülere geçişteki amaç (avantajlar), yaratılan zorluklar
 
-The tiger soup is calling to you via supercharged waveforms. Can you hear it? Have you found your myth? Being, look within and heal yourself.
-Soon there will be an invocation of wonder the likes of which the solar system has never seen. We are being called to explore the multiverse itself as an interface between insight and starfire. Eons from now, we storytellers will reflect like never before as we are aligned by the stratosphere.
-Imagine a condensing of what could be. The quantum matrix is approaching a tipping point. The Goddess will become our stepping-stone to holistic being.
+IMMD application lardan bahsedelim => integration ile birlikte örnekleri var
 
-Eons from now, tigers will live like never before as we are aligned by the dreamtime. Tigers must strengthen ourselves and awaken others. Imagine a summoning of what could be.
-It is time to take starfire to the next level. We are being called to explore the totality itself as an interface between inseparability and conscious living. This quest never ends~\cite{einstein2015relativity}.
-If you have never experienced this network inherent in nature, it can be difficult to vibrate. Being, look within and synergize yourself. It can be difficult to know where to begin.
-Tigers must take a stand against bondage. Without potentiality, one cannot live. The complexity of the present time seems to demand a maturing of our chakras if we are going to survive.
+Series and parallel connection investigation in literature
+Seri paralele neden ihtiyaç duyuluyor
+
+Parasitic investigations in literature
+
+Interleaving applications in literature
+
+In this paper, what we are going to do.... \cite{Wang2018}. 
+
+Biz de IMMD yapıyoruz
+
