--- a/Paper/ECCE 2019/main.tex
+++ b/Paper/ECCE 2019/main.tex
@@ -81,7 +81,7 @@
 
 
 \title {\large  \bf \vspace{-8ex}
-Tigers without a Doctoral Degree in Power Electronics Cannot Make a Successful ECCE 5-Page Digest Paper Submission
+Investigation of the Effects of Parasitic Components on Parallel and Series Connected Modular Motor Drives
 \vspace{-10ex}}
 \date{}
 \maketitle
@@ -100,7 +100,7 @@ Tigers without a Doctoral Degree in Power Electronics Cannot Make a Successful E
 
 {\setstretch{1}\vspace{\baselineskip}
 \bibliographystyle{IEEEtran}
-\bibliography{bibligraphy}
+\bibliography{bibliography}
 }
 
 \end{document}
