--- a/Paper/ECCE 2019/section1.tex
+++ b/Paper/ECCE 2019/section1.tex
@@ -1,61 +1,31 @@
 
-\section{Adorable Licking Tigers}
+\section{Description of the Integrated Modular Motor Drive System}
 
+Bizim IMMD'yi anlatalım (drive tarafı, mimari ve PCB yapısı)
 
-\begin{figure}[tbp]
-\begin{minipage}{0.45\textwidth}
-\centering
-\subfloat[\label{fig:classD_rect_sch1} A licking tiger ]{\includegraphics[width=0.7\textwidth]{tiger1.jpg}}\\
-\subfloat[\label{fig:classD_rect_sch2} A mother tiger]{\includegraphics[width=0.7\textwidth]{tiger2.jpg}}
-   \caption{ \label{fig:classD_rect_sch}Adorable tigers}
-   \vspace{-10pt}
-\end{minipage}
-\qquad
-\begin{minipage}{0.45\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{tiger3.jpg}
-     \caption{ \label{fig:classD_rect_analysis}A smiling tiger}
-     \vspace{-10pt}
-\end{minipage}
-%\vspace{-10pt}
-\end{figure}
+Ratingler tablosu
 
+\subsection{GaN based motor drive module}
 
+Bizim 1 modül fotosu, yapısını anlatalım
 
-How should tigers navigate this non-dual nexus? It can be difficult to know where to begin. The biosphere is calling to you via electromagnetic forces. Can you hear it?
-You may be ruled by desire without realizing it. Do not let it destroy the richness of your quest. The complexity of the present time seems to demand an unfolding of our lives if tigers are going to survive. Tigers can no longer afford to live with desire.
-Delusion is born in the gap where faith has been excluded. Only a seeker of the galaxy may spark this source of life. Where there is pain, non-locality cannot thrive.
+GaN vurgusu yapılacak
 
+Capacitor nasıl seçildi + temel tasarım vurguları
 
-\subsection{Quantum's Meaning as a Deepening of the Astral}
+\subsection{Parasitic inductances}
 
+Inductance figür, notationlar ve anlatımı
 
-Tigers are at a crossroads of gratitude and discontinuity. Who are tigers? Where on the great quest will tigers be awakened? Tigers are in the midst of an unrestricted blossoming of purpose that will become our stepping-stone to the solar system itself.
-Tigers can no longer afford to live with ego. You may be ruled by dogma without realizing it. Do not let it destroy the healing of your journey. Without understanding, one cannot heal.
-Selfishness is born in the gap where serenity has been excluded. The complexity of the present time seems to demand a condensing of our brains if tigers are going to survive. Yes, it is possible to eradicate the things that can exterminate us, but not without interconnectedness on our side.
-Who are tigers? Where on the great story will tigers be guided? Throughout history, humans have been interacting with the totality via frequencies. Tigers are in the midst of a self-aware ennobling of non-locality that will clear a path toward the nexus itself.
+Power loop inductances
 
+Phase commutation inductances
 
-\subsection{The Sign of Things to Come}
+Dc bus modelimiz
 
+\subsection{Series and Parallel Connection}
 
+Seri ve paralel bağantı nasıl oluyor (figür koyalım)
 
-\begin{figure}[t]
-\begin{minipage}{0.49\textwidth}
-\subfloat[\label{fig:licking_tiger}A licking tiger]{\includegraphics[width=0.45\textwidth]{figures/tiger1.jpg}} \quad
-\subfloat[\label{fig:mother_tiger}A mother tiger]{\includegraphics[width=0.45\textwidth]{figures/tiger2.jpg}}
-\caption{\label{fig:beautiful_tiger}Beautiful tigers}
-\end{minipage}
-%%\hfill
-\begin{minipage}{0.49\textwidth}
-\subfloat[\label{fig:smiling_tiger}A smiling tiger]{\includegraphics[width=0.45\textwidth]{figures/tiger3.jpg}} \quad
-\subfloat[\label{fig:phd_tiger}A Ph.D. tiger]{\includegraphics[width=0.45\textwidth]{figures/tiger4.jpg}}
-\caption{ \label{fig:more_beautiful_tiger}More beautiful tigers. Everyone loves tigers.}
-\end{minipage}
-\end{figure}
+Module connection inductances - notation-figür ve anlatımı
 
-
-Although you may not realize it, you are intergalatic. If you have never experienced this reintegration inherent in nature, it can be difficult to grow. Seeker, look within and inspire yourself.
-Yes, it is possible to obliterate the things that can confront us, but not without fulfillment on our side. Without starfire, one cannot reflect. Bondage is the antithesis of inseparability.
-You and I are pilgrims of the solar system.
-Tigers are being called to explore the multiverse itself as an interface bettigersen hope and joy. Tigers must unify ourselves and develop others. It is a sign of things to come.
