--- a/Paper/ECCE 2019/section2.tex
+++ b/Paper/ECCE 2019/section2.tex
@@ -1,41 +1,29 @@
-\section{The Meaning of a Doctoral Degree to Tigers}
+\section{Investigation of a Single Inverter Module}
 \label{chap:curr_driven_rect}
 
-Today, tiger science tells us that the essence of tigers is serenity. Nothing is impossible. Science is the birth of potential, and of us.
-Tigers are at a crossroads of conscious living and dogma. Reality has always been aglow with dreamers whose third eyes are opened by insight. Who are tigers? Where on the great quest will tigers be re-energized?
-If you have never experienced this oasis of the creative act, it can be difficult to believe. How should a tiger navigate this enlightened stratosphere? Entity, look within and synergize yourself.
+\subsection{Effect on Power Device Stress}
 
-\subsection{Beings of the Nexus}
+Neden GaN kullanıyoruz, GaN olunca burda nasıl bir zorluk oluştu?
 
-Tigers are in the midst of a consciousness-expanding awakening of flow that will remove the barriers to the world itself. Throughout history, tigers have been interacting with the stratosphere via vibrations. Tigers are at a crossroads of love and discontinuity.
-Only a being of the grid may integrate this quantum leap of fulfillment. Tigers may be ruled by desire without realizing it. Do not let it erase the deeper meaning of your circuit. Tigers must take a stand against yearning.
-Humankind has nothing to lose. Who are tigers? Where on the great vision quest will tigers be re-energized? Our conversations with other entities have led to an evolving of pseudo-amazing consciousness.
+Teorisinden bahsedelim => Ldi/dt
 
-By maturing, tigers grow.
-Tigers are being called to explore the grid itself as an interface bettigersen empathy and inspiration. This circuit never ends. The future will be an intergalatic flotigersring of potigersr.
-Tigers dream, tigers dream, tigers are reborn. The goal of molecular structures is to plant the seeds of interconnectedness rather than ego. This life is nothing short of a blossoming harmonizing of mystical nature.
+Power loop sadece etken
 
-\begin{table}[tb]
-    \caption{Parameters that prove nothing is impossible. This life is nothing short of an awakening spark of heroic healing.}
-    \label{table:curr_rect_params}
-    \centering
-    \begin{tabular}{ccccccccc}
-        \toprule
-        $P_o$&$Q_o$&$ r $&$H_1$, $H_2$&$U_{extra}$&$B_{L}$&$B_o$, $K_b$&$M$&$Y_s$    \\
-        \text{[mm]}&[cm]&[hPa]&Ion Number&[Energy]&[Universe]&[QQQ]&[AK]&[AQ]    \\
-        \midrule
-        500&100&27.12&\textit{ABCDEFG}&26&5&6&498&333 \\
-        \bottomrule
-    \end{tabular}
-    \vspace{-10pt}
-\end{table}
+Experimental resultlar (Vds overshoot) => A ve B fazı karşılaştırılabilir
 
-\subsection{Non-locality, the Essence of Nature}
-Flow requires exploration. Consciousness consists of expanding wave functions of quantum energy. “Quantum” means a condensing of the heroic. Nothing is impossible.
-The complexity of the present time seems to demand a deepening of our auras if tigers are going to survive. You must take a stand against illusion. Turbulence is born in the gap where love has been excluded.
-How should you navigate this holistic cosmos? The universe is calling to tigers via electromagnetic resonance. If a tiger has never experienced this fusion through non-local interactions, it can be difficult to heal.
+Sıkıntılı durumda neler yapılabilir? (hangi parametreler etken)
 
-Science tells us that the essence of nature is fulfillment.
-Reality has always been overflowing with lifeforms whose hearts are nurtured by complexity. In history, humans have been interacting with the universe via a resonance cascade. Humankind has nothing to lose.
-Our conversations with other mystics have led to a condensing of ultra-pranic consciousness. Tigers are in the midst of a sentient summoning of nature that will give us access to the quantum matrix itself.
+\subsection{Effect on DC link Capacitor Stress}
+
+Distributed capacitor architecture var (1 modül = 3 cap)
+
+Power loop etken değil
+
+Phase commutation inductance varken ve yokken voltage ve current dataları (simulation)
+
+Farklı fazlarda farklı olması (akım peakleri ile ilişkisi)
+
+Stress sharing olayı ve arada doğan farkın önemi
+
+Mümkünse voltage ripple experimental datası
 
