--- a/Paper/ECCE 2019/section3.tex
+++ b/Paper/ECCE 2019/section3.tex
@@ -1,31 +1,41 @@
-\section{Experimental Evidence that Everyone Loves Tigers}\label{sec:SimResults}
+\section{Investigation of Series and Parallel Connection}\label{sec:SimResults}
 
+Modüler yapıya dair motivasyon (kısaca)
 
-Shiva will let us access Vedic faith. This circuit never ends. Imagine an awakening of what could be.
-Traveller, look within and enlighten yourself. If you have never experienced this rebirth through non-local interactions, it can be difficult to believe. It can be difficult to know where to begin.
-The goal of a resonance cascade is to plant the seeds of hope rather than materialism.
-The cosmos is overflowing with bio-feedback. Today, science tells us that the essence of nature is gratitude. To wander the journey is to become one with it.
-Serenity is the birth of love, and of us. Tigers live, tigers dream, tigers are reborn. This life is nothing short of a refining network of potigersrful healing.
+\subsection{Series Connection}
+Neden seri bağlarız?
 
+Simulasyon sonucu (voltaga current ripple)
 
+Connection inductance etkilemiyor
 
+Interleaving aslında etkilemiyor (Vdc ripple a etkisini gösterelim)
 
-\begin{figure}[tp]
-\begin{minipage}{0.32\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{tiger2.jpg}
-  \caption{  \label{fig:curr_driven_load_line}A licking tiger}
-\end{minipage}
-~
-\begin{minipage}{0.32\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{tiger3.jpg}
-    \caption{\label{fig:curr_driven_spice}A smiling tiger}
-\end{minipage}
-~
-\begin{minipage}{0.32\textwidth}
-    \centering
-    \includegraphics[width=\textwidth]{tiger4.jpg}
-    \caption{ \label{fig:spice_i_v_in_phase} A Ph.D. tiger}
-\end{minipage}
-\end{figure}
+Wempece gönderme yapılacak
+
+\subsection{Parallel Connection}
+Interleaving varken ve yokken ne oluyor => akım geçişleri
+
+Kapasitör açısından normalde hem akım hem voltaj ripple düşümü olması bekleniyor (MU'ya ref verilecek).
+
+Connection inductance varken ve yokken akım ve voltaj ripple lar. Beklenen interleaving etkisi olmuyor.
+
+RMS akımları inductance vary ederek verelim
+
+Akım geçişlerinin potansiyel problemleri
+
+\subsection{Discussions}
+
+Serinin potansiyel sıkıntıları
+
+Serinin avantajları ve dezavantajları
+
+Seride interleaving aslında efektif olarak etken değil
+
+Paralelde ideal durumdakinin daha bile kötüsüne gidebilir
+
+Paralelin avantajları
+
+Çok sayıda modül olsa ne olurdu (seri)
+
+Çok sayıda modül olsa ne olurdu (paralel)
