ECCE 2019 makalesi büyük oranda @furkankarakaya ile birlikte yazıldı. Simulasyon sonuçları henüz konulmadı. Bu hali review edilmeye başlanabilir @ozank hocam.

--- a/Paper/ECCE 2019/bibliography.bib
+++ b/Paper/ECCE 2019/bibliography.bib
@@ -6264,6 +6264,24 @@ title = {{Speed droop control of integrated modular motor drives}},
 url = {http://ieeexplore.ieee.org/document/7392604/},
 year = {2015}
 }
+
+
+@article{Ugur2017,
+author = {Ugur, Mesut and Keysan, Ozan},
+doi = {10.1109/ISIE.2017.8001258},
+file = {:D$\backslash$:/mymendeley/Ugur, Keysan/DC link capacitor optimization for integrated modular motor drives/DC link capacitor optimization for integrated modular motor drives{\_}Ugur, Keysan{\_}2017.pdf:pdf},
+isbn = {978-1-5090-1412-5},
+journal = {2017 IEEE 26th International Symposium on Industrial Electronics (ISIE)},
+keywords = {dc link capacitor,gan,integrated modular motor drive,interleaving,machine,split winding},
+mendeley-groups = {selected topics/keysan},
+pages = {263--270},
+title = {{DC link capacitor optimization for integrated modular motor drives}},
+url = {http://ieeexplore.ieee.org/document/8001258/},
+volume = {i},
+year = {2017}
+}
+
+
 @article{Wang2015b,
 author = {Wang, Jiyao and Li, Ye and Han, Yehui},
 doi = {10.1109/TIA.2015.2413380},
@@ -6272,11 +6290,10 @@ issn = {0093-9994},
 journal = {IEEE Transactions on Industry Applications},
 keywords = {IMMD,capacitor,device,machine,topology},
 mendeley-tags = {IMMD,capacitor,device,machine,topology},
-month = {jul},
+month = {July},
 number = {4},
 pages = {3198--3207},
-title = {{Integrated Modular Motor Drive Design With {\textless}roman{\textgreater}GaN{\textless}/roman{\textgreater} Power {\textless}roman{\textgreater}FETs{\textless}/roman{\textgreater}}},
-url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=7061441 http://ieeexplore.ieee.org/document/7061441/},
+title = {{Integrated Modular Motor Drive Design With GaN Power FETs}},
 volume = {51},
 year = {2015}
 }
