--- a/Paper/ECCE 2019/conclusion.tex
+++ b/Paper/ECCE 2019/conclusion.tex
@@ -12,17 +12,13 @@ Deductions:
 
 .
 
-In the final paper:
+In the final paper, a complete analytical model will be introduced through which parasitic inductance, number of modules and interleaving effects can be analyzed. The variation of each stress will also be analyzed with varying switching frequency so that the relation between the resonance frequency due to capacitance and inductance combination and switching frequency will be more clear. 
 
-fsw etkisi incelenebilir
+The aforementioned IMMD prototype is currently on its integration and testing stage where the dedicated permanent magnet motor and control PCB are also realised. The power distribution architecture is designed such that 4 inverter modules can be connected in all-series, all-parallel or 2-series and 2-parallel fashion.
 
-Analitik model?
-
-IMMD'miz var. Üretiyoruz test ediyoruz. Hem seri hem paralel bağlanabiliyor.
+All the simulation results presented in this manuscript will be validated via experiments and presented in the final paper.
 
 Kapasitör voltajları için deney sonucu vercez (akımı ölçemeyiz onu derive etcez?)
-
-Seri paralel deney sonuçları
 
 Modüller arası akım geçişleri ölçülebilir aslında (seri
 /paralelde)
