--- a/Paper/ECCE 2019/unused.tex
+++ b/Paper/ECCE 2019/unused.tex
@@ -1,3 +1,4 @@
+H. Zhang, L. Jin, O. Wallmark, and S. Norrga, ‘Evaluation of Modular Integrated Electric Drive Concepts for Automotive Traction Applications’, IEEE Transactions on Transportation Electrification, 2017
 
 \begin{figure}[tbp]
 \begin{minipage}{0.45\textwidth}
