--- a/Paper/ECCE 2019/introduction.tex
+++ b/Paper/ECCE 2019/introduction.tex
@@ -1,17 +1,14 @@
 \section{Introduction}\label{sec:Intro}
-Why and where modular motor drives are studied and important
-Modülere geçişteki amaç (avantajlar), yaratılan zorluklar
+Integrated modular motor drives (IMMD) gained special interest in recent years to replace the conventional motor drives thanks to their high power density and fault tolerance capability. By the modularization of motor drive, redundancy of the motor drive system can be increased which is especially desired in safety ctirical applications \cite{Zhang2017}. Moreover, power semiconductor devices having lower ratings can be utilized such as Gallium Nitride (GaN) Field Effects Transistors (FETs) resulting in higher efficiency and higher power density \cite{Wang2015b}.
 
-IMMD application lardan bahsedelim => integration ile birlikte örnekleri var
+There are several IMMD studies which use different types of modularity in terms of DC link connection, such as series connected \cite{Wang2015b} and parallel connected \cite{Zhang2017} topologies. In series connected drives, the main motivation is to be able to utilize low voltage GaN devices in a higher DC link voltage. Moreover, it is aimed to reduce the DC link current ripple by using gate signal interleaving between modules \cite{Wang2013}. Parallel connection is usually used to distribute the heat dissipation and reduce the size of DC link capacitors via interleaving \cite{Ugur2017}.
 
-Series and parallel connection investigation in literature
-Seri paralele neden ihtiyaç duyuluyor
+Connection of several voltage source inverters (VSI) in a modular fashion brings its own challenges. In addition to the conventional speed and current control strategies, synchronous control of multiple modules is necessary. Potential circulating currents and unbalanced voltages may also occur under abnormal operating conditions. Moreover, the parasitic components due to the physical connections between the modules may result in unbalanced stress on module capacitors.
 
-Parasitic investigations in literature
+Careful power loop and DC bus layout design and connection architecture is required in order to minimize these effects, however too few studies in the literature give special attention to parasitic component effects in modular drive topologies. In \cite{Brown2007}, two candidate DC bus architectures are proposed and compared in terms of DC bus current oscillations due to layout inductances.
 
-Interleaving applications in literature
+In this paper, the effects of PCB parasitic inductances are investigated in a GaN based 8 kW IMMD where both series and parallel connection is applied. The voltage overshoots on GaN voltages due to power loop inductance are investigated. The actual DC link capacitor current stress and voltage ripples are analyzed considering commutation inductances between phases. Series and parallel connected inverter modules and the effect of connection inductances to their performance are analyzed.
 
-In this paper, what we are going to do.... \cite{Wang2018}. 
+Referanslarımız: \cite{Zhang2017}, \cite{Zlwka}, \cite{Wang2015b}, \cite{Brown2007}, \cite{Ugur2017}, \cite{Wang2013}
 
-Biz de IMMD yapıyoruz
 
