--- a/Paper/ECCE 2019/section3.tex
+++ b/Paper/ECCE 2019/section3.tex
@@ -3,26 +3,58 @@
 Modüler yapıya dair motivasyon (kısaca)
 
 \subsection{Series Connection}
-Neden seri bağlarız?
+The fundamental motivation behind series connection of inverter modules is the reduction of module DC bus voltage. It is persistently emphasized in \cite{Wang2013}, \cite{Zlwka} and \cite{Wang2015b} that the application of interleaving in series connection reduces the size of DC bus capacitors. However, it is not entirely true. The DC bus voltage ripple of each module along with total DC bus are shown in Fig. \ref{fig:series_volt_ripple}. It has been shown that interleaving only reduces the ripple on total DC bus ripple which has no positive effect on the system since the module voltages always has the ripple. Moreover, as shown in Fig. \ref{fig:series_curr_ripple}, the capacitor ripple currents are not affected by interleaving since it is simply impossible to have a different current when modules are connected in series. For this very reason, the connection inductances between modules have no direct effect.
 
-Simulasyon sonucu (voltaga current ripple)
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.2\textwidth]{figures/series_volt_ripple.jpg}
+    \caption{DC bus voltage ripple in series connected modules}
+    \label{fig:series_volt_ripple}
+\end{figure}
 
-Connection inductance etkilemiyor
-
-Interleaving aslında etkilemiyor (Vdc ripple a etkisini gösterelim)
-
-Wempece gönderme yapılacak
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.2\textwidth]{figures/series_curr_ripple.jpg}
+    \caption{DC bus capacitor current ripple in series connected modules}
+    \label{fig:series_curr_ripple}
+\end{figure}
 
 \subsection{Parallel Connection}
-Interleaving varken ve yokken ne oluyor => akım geçişleri
+The parallel connection is usually favored to reduce the size of DC bus capacitors with interleaving. However, when gate signals of two modules are phase shifted with proper angle, transition currents between modules emerge, as shown in Fig. \ref{fig:parallel_current_trans},
 
-Kapasitör açısından normalde hem akım hem voltaj ripple düşümü olması bekleniyor (MU'ya ref verilecek).
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.2\textwidth]{figures/parallel_current_trans.jpg}
+    \caption{Current transition occuring due to interleaving in parallel connected modules}
+    \label{fig:parallel_current_trans}
+\end{figure}
 
-Connection inductance varken ve yokken akım ve voltaj ripple lar. Beklenen interleaving etkisi olmuyor.
+The reduction on the capacitor current stress on the DC link capacitor currents when interleaving is applied in parallel connected modules has been shown for different number of modules and phase shift angles \cite{Ugur2017}. However, this analysis is only valid in ideal case where commutation and connection inductances are ignored. the voltage ripple is also expected to reduce in accordance. However, the results of the model which takes those parasitics into account suggest otherwise such that the application of interleaving may even worsen the situation. The voltage ripple and the current ripple of Dc bus capacitors with interleaving are shown in Fig. \ref{fig:parallel_volt_ripple} and Fig. \ref{fig:parallel_curr_ripple}, respectively. To better visualise the severity of the situation, the RMS of DC bus currents with and without interleaving are obtained for a full cycle of 3-phase currents and shown in Fig. \ref{parallel_curr_rms} for different phases.
 
-RMS akımları inductance vary ederek verelim
+Burada RMS akımları yorumlanacak (peak nerede oluyor vs.)
 
-Akım geçişlerinin potansiyel problemleri
+Akım geçişlerinin potansiyel problemleri ???
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.2\textwidth]{figures/parallel_volt_ripple.jpg}
+    \caption{DC bus voltage ripple in parallel connected modules}
+    \label{fig:parallel_volt_ripple}
+\end{figure}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.2\textwidth]{figures/parallel_curr_ripple.jpg}
+    \caption{DC bus capacitor current ripple in parallel connected modules}
+    \label{fig:parallel_curr_ripple}
+\end{figure}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.2\textwidth]{figures/parallel_curr_rms.jpg}
+    \caption{Variation of DC bus capacitor current RMS in parallel connected modules}
+    \label{fig:parallel_curr_rms}
+\end{figure}
 
 \subsection{Discussions}
 
@@ -38,4 +70,4 @@ Paralelin avantajları
 
 Çok sayıda modül olsa ne olurdu (seri)
 
-Çok sayıda modül olsa ne olurdu (paralel)
+Çok sayıda modül olsa ne olurdu (paralel) - interleavin daha bile kötüleştirebilir- modüllerin nasıl bağlandığına bağlı
